update docker and nginx conf
- fix django environment variables and allowed hosts
- optimize docker build context
- correct nginx upstream to django:8000
- add sent_emails directory in Dockerfile
- improve healthcheck from HTTP curl to TCP port verification

--- a/infra/docker/Dockerfile
+++ b/infra/docker/Dockerfile
@@ -7,11 +7,12 @@ WORKDIR /app
 COPY src/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY infra/docker/django/entrypoint.sh /
+COPY infra/docker/entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
 COPY --chown=appuser:appuser src/ .
 
+RUN mkdir -p /app/sent_emails && chown appuser:appuser /app/sent_emails
 RUN mkdir -p /app/db && chown appuser:appuser /app/db
 
 USER appuser
