--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   django:
     build:
-      context: .
-      dockerfile: infra/docker/django/Dockerfile
+      context: ../..
+      dockerfile: infra/docker/Dockerfile
     ports:
       - "8000:8000"
     volumes:
@@ -10,10 +10,10 @@ services:
       - static_volume:/app/staticfiles
     environment:
       - DEBUG=False
-      - DJANGO_ALLOWED_HOSTS=localhost,django
+      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/"]
+      test: ["CMD-SHELL", "timeout 1 bash -c 'echo > /dev/tcp/localhost/8000' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -23,7 +23,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./infra/docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ../nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/app/staticfiles
     depends_on:
       django:
@@ -48,7 +48,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./infra/docker/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
       - prom_data:/prometheus
     restart: unless-stopped
 
