fix prometheus metrics collection in docker network
 - add 'django' to DJANGO_ALLOWED_HOSTS for container service discovery
 - resolve HTTP 400 errors in inter-container communication

--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - static_volume:/app/staticfiles
     environment:
       - DEBUG=False
-      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,django
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "timeout 1 bash -c 'echo > /dev/tcp/localhost/8000' || exit 1"]
