--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ../monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prom_data:/prometheus
     restart: unless-stopped
 
