--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       - "3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
+      - ../monitoring/grafana/dashboards:/etc/grafana/dashboards
+      - ../monitoring/grafana/provisioning:/etc/grafana/provisioning
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin123
     restart: unless-stopped
