--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ build:
 
 deploy:
   stage: deploy
+  image: docker:latest
   before_script:
     - chmod +x ./infra/docker/scripts/deploy.sh
   script:
