--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache docker-compose
+    - apk add --no-cache docker-compose curl
     - chmod +x ./infra/docker/scripts/deploy_alpine.sh
     - chmod +x ./infra/docker/scripts/health-check_alpine.sh
   script:
