--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "9100:9100"
     restart: unless-stopped
 
-  nginx-exporter:
+  nginx_exporter:
     image: nginx/nginx-prometheus-exporter
     ports:
       - "9113:9113"
