--- a/infra/monitoring/prometheus/prometheus.yml
+++ b/infra/monitoring/prometheus/prometheus.yml
@@ -19,4 +19,4 @@ scrape_configs:
 
   - job_name: 'nginx'
     static_configs:
-      - targets: ['nginx-exporter:9113']
+      - targets: ['nginx_exporter:9113']
