--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -9,8 +9,11 @@ services:
       - sqlite_data:/app/db
       - static_volume:/app/staticfiles
     environment:
-      - DEBUG=False
-      - DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,django
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
+    env_file:
+      - .env.production
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "timeout 1 bash -c 'echo > /dev/tcp/localhost/8000' || exit 1"]
@@ -21,10 +24,11 @@ services:
   nginx:
     image: nginx:1.24-alpine
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ../nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/app/staticfiles
+      - nginx_logs:/var/log/nginx
     depends_on:
       django:
         condition: service_healthy
@@ -69,3 +73,4 @@ volumes:
   static_volume:
   prom_data:
   grafana_data:
+  nginx_logs:
